;;
;; MultiCons package
;;
[metadata]
name = multicons
version = 0.0.1
description = MultiCons (Multiple Consensuses) algorithm
long_description = file:README.md
long_description_content_type = text/markdown
author = SergioSim
author_email = sergio.simonian@etu.univ-cotedazur.fr
url = https://github.com/SergioSim/multicons
license = MIT
keywords = MultiCons, Multiple Consensuses, Consensus clustering
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
install_requires =
    graphviz==0.20
    numpy==1.22.3
    pandas==1.4.2
    pyfim==6.28
    scikit-learn==1.0.2
package_dir =
    =src
packages = find:
zip_safe = True
python_requires = >= 3.9

[options.extras_require]
dev =
    bandit==1.7.4
    black==22.3.0
    flake8==4.0.1
    fuzzy-c-means==1.6.4
    isort==5.10.1
    jupyterlab==3.4.0
    jupytext==1.13.8
    matplotlib==3.5.2
    mkdocs==1.3.0
    mkdocs-jupyter==0.20.1
    mkdocs-material==8.2.13
    mkdocstrings==0.18.1
    pylint==2.13.7
    pytest==7.1.2
    pytest-cov==3.0.0
    scikit-learn-extra==0.2.0
ci =
    twine==3.5.0

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*,
    docs/.ipynb_checkpoints

[isort]
known_multicons=multicons
sections=FUTURE,STDLIB,THIRDPARTY,MULTICONS,FIRSTPARTY,LOCALFOLDER
skip_glob=venv
profile=black

[tool:pytest]
addopts = -v --cov-report term-missing --cov-config=.coveragerc --cov=src/multicons
python_files =
    test_*.py
    tests.py
testpaths =
    tests

