;;
;; MultiCons package
;;
[metadata]
name = multicons
version = 0.2.0
description = MultiCons (Multiple Consensuses) algorithm
long_description = file:README.md
long_description_content_type = text/markdown
author = SergioSim
author_email = sergio.simonian@etu.univ-cotedazur.fr
url = https://github.com/SergioSim/multicons
license = MIT
keywords = MultiCons, Multiple Consensuses, Consensus clustering
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
install_requires =
    graphviz>=0.20
    numpy>=1.24.0
    pandas>=2.0.0
    pyfim>=6.28
    scikit-learn>=1.2.0
package_dir =
    =src
packages = find:
zip_safe = True
python_requires = >= 3.9

[options.extras_require]
dev =
    bandit==1.7.5
    black==23.3.0
    flake8==6.0.0
    fuzzy-c-means==1.7.0
    isort==5.12.0
    jupyterlab==3.6.3
    jupyter_contrib_nbextensions==0.7.0
    jupytext==1.14.5
    matplotlib==3.7.1
    mkdocs==1.4.2
    mkdocs-jupyter==0.24.1
    mkdocs-material==9.1.6
    mkdocstrings[python]==0.21.2
    pylint==2.17.2
    pytest==7.3.0
    pytest-cov==4.0.0
    scikit-learn-extra==0.3.0
ci =
    twine==4.0.2

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*,
    docs/.ipynb_checkpoints

[isort]
known_multicons=multicons
sections=FUTURE,STDLIB,THIRDPARTY,MULTICONS,FIRSTPARTY,LOCALFOLDER
skip_glob=venv
profile=black

[tool:pytest]
addopts = -v --cov-report term-missing --cov-config=.coveragerc --cov=src/multicons
python_files =
    test_*.py
    tests.py
testpaths =
    tests

