;;
;; MultiCons package
;;
[metadata]
name = multicons
version = 0.2.0
description = MultiCons (Multiple Consensuses) algorithm
long_description = file:README.md
long_description_content_type = text/markdown
author = SergioSim
author_email = sergio.simonian@etu.univ-cotedazur.fr
url = https://github.com/SergioSim/multicons
license = MIT
keywords = MultiCons, Multiple Consensuses, Consensus clustering
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
install_requires =
    graphviz>=0.20
    numpy>=1.24.0
    pandas>=2.0.0
    pyfim>=6.28
    scikit-learn>=1.2.0
package_dir =
    =src
packages = find:
zip_safe = True
python_requires = >= 3.9

[options.extras_require]
dev =
    bandit==1.7.8
    black==24.4.2
    flake8==7.0.0
    fuzzy-c-means==1.7.2
    isort==5.13.2
    jupyterlab==4.1.8
    jupytext==1.16.2
    kmedoids==0.5.1
    matplotlib==3.8.4
    mkdocs==1.6.0
    mkdocs-jupyter==0.24.7
    mkdocs-material==9.5.21
    mkdocstrings[python]==0.25.1
    pylint==3.1.0
    pytest==8.2.0
    pytest-cov==5.0.0
ci =
    twine==5.0.0

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*,
    docs/.ipynb_checkpoints

[isort]
known_multicons=multicons
sections=FUTURE,STDLIB,THIRDPARTY,MULTICONS,FIRSTPARTY,LOCALFOLDER
skip_glob=venv
profile=black

[tool:pytest]
addopts = -v --cov-report term-missing --cov-config=.coveragerc --cov=src/multicons
python_files =
    test_*.py
    tests.py
testpaths =
    tests

